# calibri_parser

./: Cargo.toml
src/: calibri_main.rs  main.rs
src/db/: insert_calls_data.rs  insert_client_info_table.rs  mod.rs
src/models/: calls_client_json.rs  get_list_client.rs  info_client_json.rs  mod.rs  tracking.rs
src/utils/: create_table.rs  mod.rs  utils.rs
